# proyecto-recruitment-team_sjj

./: CMakeLists.txt  ClassDiagram_RecruiterSoftware.drawio  Informe de autoevaluación Josue Ruano.docx  Informe de autoevaluación Juan Felipe Muñoz.docx  Informe de autoevaluación Sebastián Dow Valenzuela.docx  README.md
.github/: CMakeLists.txt  Candidato.cpp  Candidato.h  Intervierw.cpp  Intervierw.h  NationalHolidays.cpp  NationalHolidays.h  Nationality.cpp  Nationality.h  Sistema.cpp  Sistema.h  Welcome Letter.txt  main.cpp
src/: Candidato.cpp  Candidato.h  Intervierw.h  Interview.cpp  Interview.h  Nationality.cpp  Nationality.h  Sistema.cpp  Sistema.h  Welcome Letter.txt  main.cpp
tst/: CMakeLists.txt  SistemTest.cpp
